crates/sui-prover/tests/snapshots/ghost_borrow_mut/borrow_mut_call_fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 151
expression: output
---
exiting with bytecode transformation errors in borrow_analysis
error: ghost use while borrow_mut: foo::GhostStruct
   ┌─ tests/inputs/ghost_borrow_mut/borrow_mut_call_fail.move:18:3
   │
18 │   foo(ghost_ref);
   │   ^^^^^^^^^^^^^^
